z-index fix

--- a/assets/styles/layouts/_global.scss
+++ b/assets/styles/layouts/_global.scss
@@ -14,28 +14,28 @@ html {
 .face--day {
     stroke-width: 1px;
     stroke: #000;
-    stroke-dasharray: calc(250px/60);
+    stroke-dasharray: 1, 5%;
     fill: #c0ffee;
 }
 
 .face--hour {
     stroke-width: 1px;
     stroke: #000;
-    stroke-dasharray: calc(250px/48);
+    stroke-dasharray: 1, 10.8%;
     fill: #c0ffee;
 }
 
 .face--min {
     stroke-width: 1px;
     stroke: #000;
-    stroke-dasharray: calc(250px/120);
+    stroke-dasharray: 1, 3.16%;
     fill: #c0ffee;
 }
 
 .face--sec {
     stroke-width: 1px;
     stroke: #000;
-    stroke-dasharray: calc(250px/120);
+    stroke-dasharray: 1, 3.16%;
     fill: #c0ffee;
 }
 
@@ -104,6 +104,8 @@ html {
 .header-above,
 .header-below {
     height: 14vh;
+    z-index: 500;
+    position: relative;
 
     &.is-collapsed {
         height: 0;
@@ -134,7 +136,7 @@ html {
     border-style: solid;
     border-color: $white;
     position: relative;
-    z-index: 500;
+    z-index: 200;
 }
 
 .intro {
@@ -234,8 +236,6 @@ html {
 
 .footer {
     height: 10vh;
-    position: relative;
-    z-index: 1;
 
     .container {
         position: relative;
@@ -245,7 +245,7 @@ html {
         font-family: $sans;
         position: fixed;
         bottom: 1rem;
-        z-index: -10;
+        z-index: 1;
         text-decoration: none;
         color: $black;
         vertical-align: middle;
